@@ -6,6 +6,7 @@ Exec=xfce4-session-settings
 Icon=xfce4-session
 Terminal=false
 Type=Application
-Categories=X-XFCE;Settings;DesktopSettings;
+Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 _GenericName=Sessions and Startup Settings
+_X-XfceSettingsName=Sessions and Startup
