@@ -31,9 +31,6 @@ desktopdir = $(datadir)/applications
 desktop_in_files = xfce-splash-settings.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 
-settingsdir = $(datadir)/xfce4/settings-dialogs
-settings_DATA = $(desktop_DATA)
-
 @INTLTOOL_DESKTOP_RULE@
 
 EXTRA_DIST =								\
