@@ -6,6 +6,7 @@ Exec=xfce4-splash-settings
 Icon=xfce4-splash
 Terminal=false
 Type=Application
-Categories=X-XFCE;Settings;DesktopSettings;
+Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 _GenericName=Splash Screen Settings
+_X-XfceSettingsName=Splash Screen
