@@ -6,6 +6,6 @@ Exec=xfce4-autostart-editor
 Icon=xfce4-autostart-editor
 Terminal=false
 Type=Application
-Categories=X-XFCE;Settings;DesktopSettings;
+Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 _GenericName=Autostarted Applications
