@@ -1,3 +1,10 @@
+2008-08-25	Brian J. Tarricone <kelnos@xfce.org>
+
+	* settings/session/{Makefile.am,xfce-session-settings.desktop.in},
+	  settings/splash/{Makefile.am,xfce-splash-settings.desktop.in},
+	  xfce4-autostart-editor/xfce4-autostart-editor.desktop.in: Include
+	  settings dialogs in the new settings manager.
+
 2007-11-29	Benedikt Meurer <benny@xfce.org>
 
 	* icons/, xfce4-autostart-editor/main.c: Add icon from
